<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sort_by"
            android:text="@string/sort_by"/>
    <Spinner
            android:id="@+id/sortSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/sort_array"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_vaz"
            android:text="@string/vaz2106" android:clickable="true"/>
    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_add_uto"
            android:text="@string/add_auto"/>


</LinearLayout>

